kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: architecture-center-frontapp
  namespace: architecture-center-dev
  labels:
    app: architecture-center-frontapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: architecture-center-frontapp
      version: v1
  template:
    metadata:
      labels:
        app: architecture-center-frontapp
        version: v1
    spec:
      containers:
      - name: architecture-center-frontapp
        image: ms.io:5000/architecture-center/frontapp:1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
#       livenessProbe:
#         httpGet:
#           path: /actuator/health
#           port: 8989
#         initialDelaySeconds: 3
#       readinessProbe:
#         httpGet:
#           path: /actuator/health
#           port: 8989
#         initialDelaySeconds: 3
#         periodSeconds: 3
#        resources:
#          requests:
#            memory: "256Mi"
#            cpu: "1"
#          limits:
#            memory: "256Mi"
#            cpu: "1"
