kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: architecture-center-frontapp
    version: v1
  name: architecture-center-frontapp
  namespace: architecture-center-dev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: architecture-center-frontapp
    version: v1
  type: ClusterIP
